--- a/src/main/resources/templates/newProduct.html
+++ b/src/main/resources/templates/newProduct.html
@@ -5,9 +5,12 @@
 
 <head>
   <title>New Product</title>
+  <meta charset="utf-8">
+  <link rel="stylesheet" link href="../static/style.css" th:href="@{/style.css}">
 </head>
 <body>
 <form action="add" method="get">
+  <h1 class="top-info-heading">New product</h1>
   <ul>
     <li id="li_1">
       <div>ID:
