--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -11,7 +11,7 @@
     <div class="product-box"><ul>
         <th:block th:each="product : ${products}">
             <div class="product product-description"><input type="checkbox" name="id" th:value="${product.id}"
-                      th:text="'| #' + ${product.id} + ' | ' + ${product.name} + ' | '+ ${product.cost} + ' | '"></div>
+                      th:text="'| #' + ${product.id} + ' | ' + ${product.name} + ' | '+ ${product.cost} "></div>
         </th:block>
     </ul></div>
     <p>
