--- a/src/main/resources/templates/orders.html
+++ b/src/main/resources/templates/orders.html
@@ -3,20 +3,25 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" link href="../static/style.css" th:href="@{/style.css}">
-    <title>Orders</title>
+    <title>Home</title>
 </head>
 <body>
 <form name="product_form" action="/products/toCart" method="get">
-    <h1 class="top-info-heading">All products</h1>
+    <h1 class="top-info-heading">Orders</h1>
+    <input type="hidden" th:text="'You authorized as '+ ${customer_name}" name="customer" th:value="${customer_id}">
     <div class="product-box"><ul>
         <th:block th:each="product : ${products}">
-            <div class="product product-description"><p th:text="'| #' + ${product.id} + ' | ' + ${product.name} + ' | '+ ${product.cost} "></p></div>
+            <div class="product product-description"><input type="radio" name="id" th:value="${product.id}"
+                                                            th:text="'| #' + ${product.id} + ' | ' + ${product.name} + ' | '+ ${product.cost} "></div>
         </th:block>
     </ul></div>
 
     <p>
-        <button type="button" onclick="location.href='/customers'">Return to customers</button>
+        <button type="submit" onclick="product_form.action = '/products'">Add new order</button>
     </p>
+<!--    <p>-->
+<!--        <button type="submit" onclick="product_form.action = '/products/delete'">Delete orders</button>-->
+<!--    </p>-->
     <form/>
 </body>
 </html>
