Spring boot Lesson6 delete orders added

--- a/src/main/resources/templates/newProduct.html
+++ b/src/main/resources/templates/newProduct.html
@@ -13,12 +13,12 @@
   <h1 class="top-info-heading">New product</h1>
   <input type="hidden" th:text="'You authorized as '+ ${customer_name}" name="customer" th:value="${customer_id}">
   <ul>
-    <li id="li_1">
-      <div>ID:
-        <input id="id" name="id" type="text"/>
-      </div>
-    </li>
-    <br>
+<!--    <li id="li_1">-->
+<!--      <div>ID:-->
+<!--        <input id="id" name="id" type="text"/>-->
+<!--      </div>-->
+<!--    </li>-->
+<!--    <br>-->
     <li id="li_2">
       <div>Name:
         <input id="name" name="name" type="text" />
