--- a/src/main/resources/templates/orders.html
+++ b/src/main/resources/templates/orders.html
@@ -10,18 +10,18 @@
     <h1 class="top-info-heading">Orders</h1>
     <input type="hidden" th:text="'You authorized as '+ ${customer_name}" name="customer" th:value="${customer_id}">
     <div class="product-box"><ul>
-        <th:block th:each="product : ${products}">
-            <div class="product product-description"><input type="radio" name="id" th:value="${product.id}"
-                                                            th:text="'| #' + ${product.id} + ' | ' + ${product.name} + ' | '+ ${product.cost} "></div>
+        <th:block th:each="order : ${orders}">
+            <div class="product product-description"><input type="checkbox" name="id" th:value="${order.getId}"
+                                                            th:text="'| #' + ${order.getProduct.getId} + ' | ' + ${order.getProduct.getName} + ' | '+ ${order.getProduct.getCost} "></div>
         </th:block>
     </ul></div>
 
     <p>
         <button type="submit" onclick="product_form.action = '/products'">Add new order</button>
     </p>
-<!--    <p>-->
-<!--        <button type="submit" onclick="product_form.action = '/products/delete'">Delete orders</button>-->
-<!--    </p>-->
+    <p>
+        <button type="submit" onclick="product_form.action = '/cart/deleteOrder'">Delete orders</button>
+    </p>
     <form/>
 </body>
 </html>
