--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -11,22 +11,27 @@
     <input type="hidden" th:text="'You authorized as '+ ${customer_name}" name="customer" th:value="${customer_id}">
     <div class="product-box"><ul>
         <th:block th:each="product : ${products}">
-            <div class="product product-description"><input type="checkbox" name="id" th:value="${product.id}"
-                      th:text="'| #' + ${product.id} + ' | ' + ${product.name} + ' | '+ ${product.cost} "></div>
+            <div class="product-description product">
+                <output th:text="' #' + ${product.id} + ' | ' + ${product.name} + ' | '+ ${product.cost}"></output>
+                <div class="buttons">
+                    <button type="submit" name="addProd"  th:value="${product.id}" >Add to Cart</button>
+                    <button type="submit" name="delProd"  th:value="${product.id}" onclick="product_form.action = '/products/delete'" > Delete product</button>
+                </div>
+            </div>
         </th:block>
     </ul></div>
-    <p>
-        <button type="submit">Add to cart</button>
-    </p>
+<!--    <p>-->
+<!--        <button type="submit">Add to cart</button>-->
+<!--    </p>-->
     <p>
         <button type="submit" onclick="product_form.action = '/cart'">Go to cart</button>
     </p>
     <p>
         <button type="submit" onclick="product_form.action = '/products/new'">Add new product</button>
     </p>
-    <p>
-        <button type="submit" onclick="product_form.action = '/products/delete'">Delete products</button>
-    </p>
+<!--    <p>-->
+<!--        <button type="submit" onclick="product_form.action = '/products/delete'">Delete products</button>-->
+<!--    </p>-->
     <p>
         <button type="submit" onclick="product_form.action = '/customers'">Return to customers</button>
     </p>
