--- a/src/main/resources/templates/customers.html
+++ b/src/main/resources/templates/customers.html
@@ -15,13 +15,13 @@
         </th:block>
     </ul></div>
     <p>
-        <button type="submit">Show orders</button>
+        <button type="submit" class="article__btn" >Show orders</button>
     </p>
     <p>
-        <button type="submit" onclick="customer_form.action = '/products'">Go to store</button>
+        <button type="submit" class="article__btn" onclick="customer_form.action = '/products'">Go to store</button>
     </p>
     <p>
-        <button type="submit" onclick="customer_form.action = '/customers/delete'">Delete customer</button>
+        <button type="submit" class="article__btn" onclick="customer_form.action = '/customers/delete'">Delete customer</button>
     </p>
     <form/>
 </body>
