--- a/src/main/resources/templates/orders.html
+++ b/src/main/resources/templates/orders.html
@@ -17,10 +17,10 @@
     </ul></div>
 
     <p>
-        <button type="submit" onclick="product_form.action = '/products'">Add new order</button>
+        <button type="submit" class="article__btn"  onclick="product_form.action = '/products'">Add new order</button>
     </p>
     <p>
-        <button type="submit" onclick="product_form.action = '/cart/deleteOrder'">Delete orders</button>
+        <button type="submit" class="article__btn" onclick="product_form.action = '/cart/deleteOrder'">Delete orders</button>
     </p>
     <form/>
 </body>
