--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -15,7 +15,7 @@
                 <input name="customer" type="text"/>
             </div>
         <br>
-            <input type="submit" value="Login" />
+            <input type="submit" class="article__btn" value="Login" />
 </form>
 </body>
 </html>
