--- a/src/main/resources/templates/newProduct.html
+++ b/src/main/resources/templates/newProduct.html
@@ -32,7 +32,7 @@
     </li>
     <br>
     <li>
-      <input type="submit" value="Add" />
+      <input type="submit" class="article__btn" value="Add" />
     </li>
   </ul>
 </form>
