--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -2,39 +2,54 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" link href="../static/style.css" th:href="@{/style.css}">
     <title>Home</title>
 </head>
 <body>
 <form name="product_form" action="/products/toCart" method="get">
-    <h1 class="top-info-heading">Products</h1>
-    <input type="hidden" th:text="'You authorized as '+ ${customer_name}" name="customer" th:value="${customer_id}">
-    <div class="product-box"><ul>
-        <th:block th:each="product : ${products}">
-            <div class="product-description product">
-                <output th:text="' #' + ${product.id} + ' | ' + ${product.name} + ' | '+ ${product.cost}"></output>
-                <div class="buttons">
-                    <button type="submit" name="addProd" class="article__btn" th:value="${product.id}" >Add to Cart</button>
-                    <button type="submit" name="delProd" class="article__btn" th:value="${product.id}" onclick="product_form.action = '/products/delete'" > Delete product</button>
-                </div>
-            </div>
-        </th:block>
-    </ul></div>
-<!--    <p>-->
-<!--        <button type="submit">Add to cart</button>-->
-<!--    </p>-->
-    <p>
-        <button type="submit" class="article__btn" onclick="product_form.action = '/cart'">Go to cart</button>
-    </p>
-    <p>
-        <button type="submit" class="article__btn" onclick="product_form.action = '/products/new'">Add new product</button>
-    </p>
-<!--    <p>-->
-<!--        <button type="submit" onclick="product_form.action = '/products/delete'">Delete products</button>-->
-<!--    </p>-->
-    <p>
-        <button type="submit" class="article__btn" onclick="product_form.action = '/customers'">Return to customers</button>
-    </p>
+    <div class="container placement__list">
+        <h1 class="top-info-heading">Products</h1>
+        <input type="hidden" th:text="'You authorized as '+ ${customer_name}" name="customer" th:value="${customer_id}">
+        <div class="product-box">
+            <ul>
+                <th:block th:each="product : ${products}">
+                    <div class="product-description product">
+                        <output th:text="' #' + ${product.id} + ' | ' + ${product.name} + ' | '+ ${product.cost}"></output>
+                        <div class="buttons">
+                            <button type="submit" name="addProd" class="article__btn" th:value="${product.id}">Add to
+                                Cart
+                            </button>
+                            <button type="submit" name="delProd" class="article__btn" th:value="${product.id}"
+                                    onclick="product_form.action = '/products/delete'"> Delete product
+                            </button>
+                        </div>
+                    </div>
+                </th:block>
+            </ul>
+        </div>
+        <!--    <p>-->
+        <!--        <button type="submit">Add to cart</button>-->
+        <!--    </p>-->
+        <div class="container">
+            <p>
+                <button type="submit" class="article__btn" onclick="product_form.action = '/cart'">Go to cart</button>
+            </p>
+            <p>
+                <button type="submit" class="article__btn" onclick="product_form.action = '/products/new'">Add new
+                    product
+                </button>
+            </p>
+            <!--    <p>-->
+            <!--        <button type="submit" onclick="product_form.action = '/products/delete'">Delete products</button>-->
+            <!--    </p>-->
+            <p>
+                <button type="submit" class="article__btn" onclick="product_form.action = '/customers'">Return to
+                    customers
+                </button>
+            </p>
+        </div>
+    </div>
     <form/>
 </body>
 </html>
