--- a/src/main/resources/templates/orders.html
+++ b/src/main/resources/templates/orders.html
@@ -15,13 +15,14 @@
                                                             th:text="'| #' + ${order.getProduct.getId} + ' | ' + ${order.getProduct.getName} + ' | '+ ${order.getProduct.getCost} "></div>
         </th:block>
     </ul></div>
-
+    <div class="container">
     <p>
         <button type="submit" class="article__btn"  onclick="product_form.action = '/products'">Add new order</button>
     </p>
     <p>
         <button type="submit" class="article__btn" onclick="product_form.action = '/cart/deleteOrder'">Delete orders</button>
     </p>
+    </div>
     <form/>
 </body>
 </html>
