--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -12,7 +12,7 @@
 <form action="/auth" method="get">
     <h1 class="top-info-heading">Welcome to online store!</h1>
             <div>Name:
-                <input name="customer" type="text"/>
+                <input class="services__title" name="customer" type="text"/>
             </div>
         <br>
             <input type="submit" class="article__btn" value="Login" />
