--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -69,6 +69,7 @@ img {
               padding-top: 10px;
               padding-bottom: 10px;
               margin-right:auto;
+              box-shadow: 0px 0px 30px 0px rgba(24, 0, 101, 0.7);
 }
 .top-info-heading {
               font-size: 32px;
@@ -127,5 +128,17 @@ img {
 .placement__list {
   display: flex;
   flex-wrap: wrap;
+}
+.services__title {
+  display: inline-block;
+  margin: 0;
+  padding-right: 20px;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 200%;
+  color: var(--accent-color);
+  background-image: url("../img/right-angle-2.svg");
+  background-repeat: no-repeat;
+  background-position: right center;
 }
 
