Spring Lesson12 registration added

--- a/src/main/resources/templates/customers.html
+++ b/src/main/resources/templates/customers.html
@@ -21,10 +21,7 @@
         </div>
         <div class="container">
             <p>
-                <button type="submit" class="article__btn">Show orders</button>
-            </p>
-            <p>
-                <button type="submit" class="article__btn" onclick="customer_form.action = '/products'">Go to store
+                <button type="submit" class="article__btn" onclick="customer_form.action = '/products'">Return to store
                 </button>
             </p>
             <p>
