--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -11,7 +11,9 @@
 <form name="product_form" action="/products/toCart" method="get">
     <div class="container placement__list">
         <h1 class="top-info-heading">Products</h1>
-        <input type="hidden" th:text="'You authorized as '+ ${customer_name}" name="customer" th:value="${customer_id}">
+        <div><input type="hidden" th:text="'You authorized as '+ ${customer_name}" name="customer" th:value="${customer_id}">
+            <button type="submit"  onclick="product_form.action = '/logout'">Logout</button>
+        </div>
         <div class="product-box">
             <ul>
                 <th:block th:each="product : ${products}">
@@ -37,15 +39,18 @@
                 <button type="submit" class="article__btn" onclick="product_form.action = '/cart'">Go to cart</button>
             </p>
             <p>
+                <button type="submit" onclick="product_form.action = '/customers/showInfo'" class="article__btn">Show orders</button>
+            </p>
+            <p>
                 <button sec:authorize="hasAnyRole('ADMIN', 'MANAGER')" type="submit" class="article__btn" onclick="product_form.action = '/products/new'">Add new
                     product
                 </button>
             </p>
-            <!--    <p>-->
-            <!--        <button type="submit" onclick="product_form.action = '/products/delete'">Delete products</button>-->
-            <!--    </p>-->
+<!--                <p>-->
+<!--                    <button type="submit" onclick="product_form.action = '/products/delete'">Delete products</button>-->
+<!--                </p>-->
             <p>
-                <button sec:authorize="hasAnyRole('ADMIN', 'MANAGER')" type="submit" class="article__btn" onclick="product_form.action = '/customers'">Return to
+                <button sec:authorize="hasAnyRole('ADMIN', 'MANAGER')" type="button" class="article__btn" onclick="location.href = '/customers'">Show all
                     customers
                 </button>
             </p>
